# computational-mathematics

./: .gitignore  .gitignore.md  Inflation Forecast Targeting.ipynb  README.md
Bayesian Statistics/: Bayesian Decision Theory.ipynb  requirements.txt
Bayesian Statistics/BART/: BART.ipynb  HMC.ipynb  posterior_predictive_plots.py  regression_metrics.py
Bayesian Statistics/Hamiltonian Monte Carlo/: GLM BMA.ipynb  HMC.ipynb
Bayesian Statistics/Sequential Monte Carlo/: SMC.ipynb
Economics/: Gensys.py  Solving Simple DSGE Model.ipynb  requirements.txt
Machine Learning/: Ensemble Classification.ipynb  WGAN-Synthetic Data.ipynb  requirements.txt
Numerical Computing/rust/: Cargo.toml  pyproject.toml
Numerical Computing/rust/rust /benchmarks/: README.md  Rust v. Python.ipynb  requirements.txt
Numerical Computing/rust/src/: lib.rs  linalg.rs  linear_regression.rs  main.rs  python.rs  stats.rs
Quantitative Finance/: requirements.txt
Quantitative Finance/Deep Portfolio Optimization/: Mean Variance.ipynb  deep_port_opt.ipynb
Quantitative Finance/HMM/: Hidden Markov Models.ipynb  spy.csv
Timeseries/: Bayesian GAM.ipynb  Kalman Filter.ipynb  Particel Filter.ipynb  home_sales_us.csv  requirements.txt
